@@ -893,6 +893,14 @@ class Test_CVode:
         tt, _ = exp_sim.simulate(tfinal = tfinal, ncp = 2)
         assert tt[-1] < tfinal # check final interval is skipped
 
+    def test_backwards_report_continuously(self):
+        """Test that backward simulation functions with report_continuously = True."""
+        mod = Explicit_Problem(lambda t, y: [0], y0 = [1], t0 = 1)
+        sim = CVode(mod)
+        sim.backward = True
+        sim.report_continuously = True
+        sim.simulate(0, ncp = 10)
+
 class Test_IDA:
     
     @classmethod
@@ -1344,6 +1352,14 @@ class Test_IDA:
         exp_sim.report_continuously = report_continuously
         tt, _, _ = exp_sim.simulate(tfinal = tfinal, ncp = 10)
         assert tt[-1] < tfinal # check final interval is skipped
+
+    def test_backwards_report_continuously(self):
+        """Test that backward simulation functions with report_continuously = True."""
+        mod = Implicit_Problem(lambda t, y, yd: yd, y0 = [1], yd0 = [0], t0 = 1)
+        sim = IDA(mod)
+        sim.backward = True
+        sim.report_continuously = True
+        sim.simulate(0, ncp = 10)
 
 
 class Test_Sundials:
